syntax = "proto3";

option csharp_namespace = "VcGrpcService.Proto";

package chat;

// The greeting service definition.
service Chat {
  // Sends a greeting
  rpc Join(stream JoinRequest) returns (stream JoinResponse);
  rpc GetRooms(GetRoomsRequest) returns (GetRoomsResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

message JoinRequest{
  bool initial = 1;
  MessageRequest message_request = 2;
}


message JoinResponse{
  bool confirmation = 1;
  MessageNotification message_notification = 2;
}

message MessageNotification {
  string room_id = 1;
  string sender = 2;
  string message_body = 3;
}

message MessageRequest {
  string target = 1;
  string room_id = 2;
  RoomType type = 3;
  string message_body = 4;
}

message GetRoomsRequest{
}

message GetRoomsResponse{
  repeated Room rooms = 1;
}

message Room{
  string id = 1;
  string name = 2;
  RoomType type = 3;
  string last_message = 4;
  int64 last_message_datetime = 5;
}

enum RoomType {
  Unknown = 0;
  Private = 1;
  Group = 2;
}

message GetMessagesRequest{
  string room_id = 1;
}

message GetMessagesResponse{
  repeated Message messages = 1;
}

message Message {
  string room_id = 1;
  string message_body = 2;
  string sender_id = 3;
}